Add admin login system

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0f0a1e" />
-    <meta name="description" content="Spark — Interactive Daily Inspiration Generator with Admin Panel. Explore, discover, and be inspired." />
-    <meta property="og:title" content="Spark — Daily Inspiration" />
+    <meta name="description" content="Quotify — Interactive Daily Inspiration Generator with Admin Panel. Explore, discover, and be inspired." />
+    <meta property="og:title" content="Quotify — Daily Inspiration" />
     <meta property="og:description" content="An interactive quote explorer with admin tools. Discover inspiration by mood, topic, or serendipity." />
     <meta property="og:type" content="website" />
-    <title>Spark — Daily Inspiration</title>
+    <title>Quotify — Daily Inspiration</title>
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { background: #0f0a1e; }
